# server

./: .docker.env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  dev.sh  diesel.toml  docker-compose.yaml  entrypoint.sh  quick_dev.sh  upload-stress-test.sh
http_client/: http-client.example-env.json  requests.http
migrations/2025-07-04-164835_users/: up.sql
migrations/2025-07-10-203614_roles/: down.sql  up.sql
migrations/2025-08-05-195542_media_files/: down.sql  up.sql
migrations/2025-08-12-155625_add_thumbnail_path_to_media_files/: down.sql  up.sql
src/lib/: lib.rs
src/lib/api/: http_server.rs  mod.rs  routes.rs
src/lib/api/domain/: errors.rs  mod.rs  response_body.rs
src/lib/api/routes/: health.rs
src/lib/media/: mod.rs
src/lib/media/application/: mod.rs
src/lib/media/application/commands/: delete_media.rs  mod.rs  upload_media.rs
src/lib/media/application/queries/: get_media_files.rs  get_media_stream.rs  mod.rs
src/lib/media/domain/: file_storage_service.rs  media_file.rs  media_repository.rs  mod.rs  thumbnail_service.rs
src/lib/media/infrastructure/: diesel_media_repository.rs  mappers.rs  minio_storage_service.rs  mod.rs  models.rs
src/lib/media/interface/http/: routes.rs
src/lib/persistence/domain/: schema.rs
src/lib/shared/interface/http/: mod.rs
src/lib/shared/interface/http/extractors/: validated_json.rs
src/lib/shared/interface/http/middlewares/: concurrent_requests_limit.rs  mod.rs  require_auth.rs
src/lib/shared/interface/openapi/: security.rs
src/lib/users/: mod.rs  routes.rs
src/lib/users/application/: mod.rs
src/lib/users/application/commands/: create_user.rs  login.rs
src/lib/users/application/queries/: get_all_users.rs  get_user.rs  mod.rs
src/lib/users/domain/: auth.rs  mod.rs  roles.rs  user.rs  user_repository.rs
src/lib/users/infrastructure/: diesel_user_repository.rs  jwt_token_service.rs  mappers.rs  mod.rs  models.rs
src/lib/users/interface/http/: mod.rs  routes.rs
src/lib/users/interface/http/extractors/: validated_json.rs
tests/: quick_dev.rs  tests.rs
tests/media/: mocks.rs  mod.rs
tests/media/application/commands/: test_delete_media.rs  test_upload_media.rs
tests/media/integration/: test_media_endpoints.rs
tests/users/: mocks.rs
tests/users/application/commands/: test_create_user.rs  test_login.rs
tests/users/application/queries/: test_get_all_users.rs  test_get_user.rs
tests/users/domain/: auth.rs  roles.rs  user.rs  user_repository.rs
tests/users/infrastructure/: test_jwt_token_service.rs  test_mappers.rs  test_models.rs  test_repository.rs
tests/users/integration/: test_user_endpoints.rs
tests/utils/: functions.rs  mod.rs  test_helpers.rs
